package uk.dsx.reactiveconfig

class RawProperty(val key: String, val value: Any) {
}