package uk.dsx.reactiveconfig.interfaces

interface PropertyDescription {
    val key: String
    val type: Any
}